# Supermarket_Sales

./: AA_CRASH_COURSE.code-workspace  Makefile  README.md  app.py  pyproject.toml  requirements.txt
Streamlit_dashboard/: app.py
Supermarket_sales/: __init__.py  config.py  data_cleaning.py  dataset.py  features.py  plots.py
Supermarket_sales/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: Random_forest_classifier_model.pkl
notebooks/: EDA.ipynb  Sales_encoded.csv  feature_eng.ipynb
processed/: Sales.csv  features.csv  labels.csv  test_predictions.csv
