[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Supermarket_sales"
version = "0.0.1"
description = "End to end supply chain with Machine Learning"
authors = [
  { name = "Abby" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["Supermarket_sales"]
include = ["pyproject.toml", "Supermarket_sales/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Supermarket_sales"]
force-sort-within-sections = true

